--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,6 +27,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-jdk8</artifactId> <!-- use mapstruct-jdk8 for Java 8 or higher -->
+			<version>1.3.0.Final</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.postgresql</groupId>
